--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "pm2 start server.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "express": "^4.21.2",
     "jspdf": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0"
-    
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
