--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jspdf": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
