--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "framer-motion": "^12.6.3",
     "jspdf": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
